test/fail/PublicWithoutOpen2.agda
module PublicWithoutOpen2 where

import Imports.A public
